[tool.poetry]
name = "mariner"
version = "0.0.1"
description = "An utility for controlling Elegoo Mars 3D printers"
license = "MIT"
readme = "README.md"
authors = [
  "Luiz Ribeiro <luizribeiro@gmail.com>",
]

[tool.poetry.scripts]
mariner = 'mariner.server:main'

[tool.poetry.dependencies]
aiofiles = "0.5.0"
pyre-extensions = "0.0.18"
pyserial = "3.4"
python = "^3.7"
starlette = "0.13.8"
typedstruct = "0.1.0"
uvicorn = "0.11.8"

[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8 = "3.8.3"
green = "3.2.2"
pyexpect = "1.0.20"
pyre-check = "0.0.52"
python-language-server = "0.35.1"
requests = "2.24.0"

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"
